k8s/standard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: presto-ingress
  labels:
    app: presto
    unit: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: presto-coordinator
              servicePort: 8080
